# perceptual_neural_physical

./: .gitignore  README.md  index.html  pyproject.toml
data/: test_param_log_v2.csv  val_param_log_v2.csv
gretsi23/: 01_generate_audio.py  02_compute_pnp_jacobian.py  03_train_effnet_ploss.py  03b_train_effnet_ploss_nolog.py  03c_train_effnet_ploss_raw.py  03d_train_effnet_ploss_raw_log.py  04_train_effnet_pnploss_novol_adaptive_brake1.py  05_train_effnet_pnploss_novol.py  05b_train_effnet_pnploss_novol_nolog.py  05c_train_effnet_pnploss_novol_raw.py  05d_train_effnet_pnploss_novol_log.py  06_train_effnet_specloss.py  06c_train_effnet_specloss_raw.py  06d_train_effnet_specloss_log.py  07_train_effnet_pnploss_novol_meanM.py  07b_train_effnet_pnploss_novol_meanM_nolog.py  07c_train_effnet_pnploss_novol_meanM_raw.py  07d_train_effnet_pnploss_novol_meanM_log.py  setups.py
icassp23/: 01_generate_audio.py  02_compute_pnp_jacobian.py  02_compute_riemannian_metric.py  02b_compute_pnp_jacobian.py  02b_write_h5files.py  02c_write_h5files.py  03_train_cnn.py  03_train_effnet_ploss.py  03b_train_effnet_ploss.py  03c_train_effnet_ploss_modal_nominmax.py  04_train_effnet_specloss.py  04b_train_effnet_specloss.py  05_compute_M.py  06_train_effnet_pnploss.py  07_train_effnet_pnploss_novol.py  07b_train_effnet_pnploss_novol.py  08_train_effnet_pnploss_novol_adaptive_brake1.py  08b_train_effnet_pnploss_novol_adaptive_brake1.py  09_train_effnet_pnploss_novol_scheduled.py  09b_train_effnet_pnploss_novol_scheduled.py  10_train_effnet_pnploss_novol_const.py  11_train_effnet_pnploss_novol_adaptive_brake1_diag.py  (+9 more)
(+861 files in other folders)
