[project]
name = "pnp_synth"
version = "0.1.0.dev0"
description = "Perceptual-Neural-Physical (PNP) modeling of musical timbre"

dependencies = [
    "functorch",
    #"kymatio @ git+https://git@github.com/kymatio/kymatio.git@main",
    "librosa",
    "pandas",
    "sklearn",
    "soundfile",
    "auraloss",
    "pytorch-lightning",
    "nnAudio",
    "h5py",
    "joblib"
]

[project.urls]
"Homepage" = "https://github.com/lylyhan/perceptual_neural_physical"
"Bug Tracker" = "https://github.com/lylyhan/perceptual_neural_physical"


[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
]
